<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Retrica"
                android:textColor="@color/colorTitle"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/premium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitle"
                android:text="Premium"
                android:textSize="18sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/premium_content"
            android:textSize="14dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/rounded_image"
            android:background="@drawable/sharapova"
            android:layout_weight="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/rounded_layout"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/stat_sys_download"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Free"
                    android:textSize="10dp"
                    android:textColor="@color/colorButtonText"/>

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/rounded_button"
                android:text="Continue"
                android:textColor="@color/colorButtonText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/purchase_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/puchase_string"
            android:textAlignment="center"
            android:textSize="10dp"
            android:layout_marginBottom ="10dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/terms_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_content"
            android:textSize="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>